--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,8 @@
     "bootstrap": ">=3.0.0",
     "font-awesome": "^4.6.2",
     "bootbox.js": "4.4.0",
-    "adminbsb-materialdesign": "^1.0.4"
+    "adminbsb-materialdesign": "^1.0.4",
+    "eonasdan-bootstrap-datetimepicker": "^4.17.45",
+    "moment": "^2.17.1"
   }
 }
